--- a/Assignment-1/index.html
+++ b/Assignment-1/index.html
@@ -28,7 +28,7 @@
 
     <main>
       <article>
-        <img src="img/934713.jpg" alt="Spider-man">
+        <img src="934713.jpg" alt="Spider-man">
         <section class="spider-man">
           <div class="talk">
             Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sunt qui asperiores distinctio deleniti quam
@@ -43,15 +43,77 @@
 
     <footer>
       <div class="footer">
-        <label>The copyright goes to Soumya Subhrajit Bag</label>
-        <ul class="foot">
-          <li>Instagram</li>
-          <li>Facebook</li>
-          <li>Linkedin</li>
-          <li>Github</li>
-        </ul>
+        <div class="footer-content">
+          <p class="footer-copyright">
+            &copy; 2023 Soumya Subhrajit Bag
+          </p>
+
+          <ul class="footer-social-media">
+            <li class="footer-social-media">
+              <a href="#" class="footer-social-media-link">
+                <i class="fab fa-instagram">Instagram</i>
+              </a>
+            </li>
+
+            <li class="footer-social-media">
+              <a href="#" class="footer-social-media-link">
+                <i class="fab fa-facebook">Facebook</i>
+              </a>
+            </li>
+
+            <li class="footer-social-media">
+              <a href="#" class="footer-social-media-link">
+                <i class="fab fa-twitter">Twitter</i>
+              </a>
+            </li>
+
+            <li class="footer-social-media">
+              <a href="#" class="footer-social-media-link">
+                <i class="fab fa-github">Github</i>
+              </a>
+            </li>
+
+            <li class="footer-social-media">
+              <a href="#" class="footer-social-media-link">
+                <i class="fab fa-twitch">Twitch</i>
+              </a>
+            </li>
+          </ul>
+        </div>
       </div>
     </footer>
+
+    <!-- <footer>
+      <div class="footer">
+        <div class="footer-content">
+          <p class="footer-copyright">
+            &copy; 2023 Soumya Subhrajit Bag
+          </p>
+          <ul class="footer-social-media">
+            <li>
+              <a href="#" class="footer-social-link">
+                <i class="fab fa-instagram">Intagram</i>
+              </a>
+            </li>
+            <li>
+              <a href="#" class="footer-social-link">
+                <i class="fab fa-facebook">Facebook</i>
+              </a>
+            </li>
+            <li>
+              <a href="#" class="footer-social-link">
+                <i class="fab fa-linkedin">Linkedin</i>
+              </a>
+            </li>
+            <li>
+              <a href="#" class="footer-social-link">
+                <i class="fab fa-github">Github</i>
+              </a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </footer> -->
   </body>
 
 
