Adding 3 more elemeent in the codebase..

--- a/Assignment-1/index.html
+++ b/Assignment-1/index.html
@@ -48,6 +48,11 @@
             &copy; 2023 Soumya Subhrajit Bag
           </p>
 
+
+          <!-- We gave the class name as same as the previous one bcz
+          we want to apply those effects on every single element we have
+          thus no-longer we required to add extra thing for anyting.. -->
+
           <ul class="footer-social-media">
             <li class="footer-social-media">
               <a href="#" class="footer-social-media-link">
