--- a/Assignment-3/index.html
+++ b/Assignment-3/index.html
@@ -13,12 +13,12 @@
       <h2 class="login">Login</h2>
 
       <div class="login-container">
-        <div class="login-box">
+        <div class="user-box">
           <input type="text" class="" required>
           <label for="">Username</label>
         </div>
 
-        <div class="login-box">
+        <div class="user-box">
           <input type="password" class="" required>
           <label for="">Password</label>
         </div>
