last commiting in the assigment-3..

--- a/Assignment-3/index.html
+++ b/Assignment-3/index.html
@@ -10,7 +10,7 @@
 
   <body>
     <div class="login-box">
-      <h2 class="login">Login</h2>
+      <h2 class="login-txt">Login</h2>
 
       <div class="login-container">
         <div class="user-box">
@@ -22,13 +22,10 @@
           <input type="password" class="" required>
           <label for="">Password</label>
         </div>
+      </div>
 
-        <a href="#" class="btn">
-          <span></span>
-          <span></span>
-          <span></span>
-          <span></span>
-          Sumbit</a>
+      <div class="btn">
+        <a href="#" class="btn-link">Submit</a>
       </div>
     </div>
   </body>
