Complete the assignment -4.

--- a/Assignment-4/index.html
+++ b/Assignment-4/index.html
@@ -2,6 +2,9 @@
 <html>
 
   <head>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <title>
       Assignment-4
@@ -12,6 +15,7 @@
     <div class="container">
       <div class="item">
         <h2>Item-1</h2>
+
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis nemo voluptates aliquid, ducimus repellendus
           neque.</p>
       </div>
