--- a/Assignment - 5/Index.html
+++ b/Assignment - 5/Index.html
@@ -37,6 +37,37 @@
         </div>
       </div>
     </navbar>
+
+
+    <footer>
+      <div class="page-footer">
+        <p>&copy; All rights reversed by Soumya Subhrajit Bag</p>
+
+        <div class="footer-links">
+
+          <li class="footer-link-list">
+            <a href="" class="fab fb-facebook">Facebook</a>
+          </li>
+
+          <li class="footer-link-list">
+            <a href="" class="fab fb-instagram">Instagram</a>
+          </li>
+
+          <li class="footer-link-list">
+            <a href="" class="fab fb-twitter">Twitter</a>
+          </li>
+
+          <li class="footer-link-list">
+            <a href="" class="fab fb-github">Twitter</a>
+          </li>
+
+          <li class="footer-link-list">
+            <a href="" class="fab fb-linkedin">Linkedin</a>
+          </li>
+
+        </div>
+      </div>
+    </footer>
   </body>
 
 </html>
