Adding some more deatail in the code.

--- a/Assignment - 5/Index.html
+++ b/Assignment - 5/Index.html
@@ -58,7 +58,7 @@
           </li>
 
           <li class="footer-link-list">
-            <a href="" class="fab fb-github">Twitter</a>
+            <a href="" class="fab fb-github">Github</a>
           </li>
 
           <li class="footer-link-list">
