--- a/Assignment - 6/index.html
+++ b/Assignment - 6/index.html
@@ -31,7 +31,8 @@
 
         <!-- THIS IS FOR THE LEFT-SIDE NAV-LINKS -->
         <div class="nav-links">
-          <ul class="nav-liks-left">
+          <ul class="nav-links-left">
+
             <li class="nav-media">
               <a href="#" class="nav-media-link">
                 Live
@@ -78,24 +79,29 @@
 
               </a>
             </li>
+
           </ul>
-          <!-- THIS IS FOR THE RIGHT-SIDE LINKS -->
-
-          <ul class="nav-links-right">
-            <li class="nav-media-right">
-              <a href="#" class="nav-media-link-right">
-                <i class="nav-media-link-try">Try Live for free</i>
-              </a>
-            </li>
-
-            <li class="nav-media-right">
-              <a href="#" class="nav-media-link-right">
-                <i class="nav-media-link-login">Log in or register</i>
-              </a>
-            </li>
-          </ul>
-
         </div>
+
+
+        <!-- THIS IS FOR THE RIGHT-SIDE LINKS -->
+
+        <ul class="nav-links-right">
+          <li class="nav-media-right">
+            <a href="#" class="nav-media-link-right">
+              <i class="nav-media-link-try">Try Live for free</i>
+            </a>
+          </li>
+
+          <li class="nav-media-right">
+            <a href="#" class="nav-media-link-right">
+              <i class="nav-media-link-login">Log in or register</i>
+            </a>
+          </li>
+        </ul>
+
+
+
 
 
       </nav>
